@@ -9,17 +9,14 @@ import me.TfT02.Assassin.Listeners.PlayerListener;
 import me.TfT02.Assassin.Listeners.TagListener;
 import me.TfT02.Assassin.runnables.ActiveTimer;
 import me.TfT02.Assassin.runnables.AssassinRangeTimer;
-import me.TfT02.Assassin.util.CustomShapedRecipe;
+//import me.TfT02.Assassin.util.CustomShapedRecipe;
 import me.TfT02.Assassin.util.Data;
 import me.TfT02.Assassin.util.DependencyDownload;
 import me.TfT02.Assassin.util.Metrics;
-import me.TfT02.Assassin.util.NamedItemStack;
+//import me.TfT02.Assassin.util.NamedItemStack;
 import net.milkbowl.vault.economy.Economy;
 
-import org.bukkit.ChatColor;
-import org.bukkit.Material;
 import org.bukkit.configuration.file.FileConfiguration;
-import org.bukkit.inventory.ItemStack;
 import org.bukkit.plugin.PluginManager;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.scheduler.BukkitScheduler;
@@ -63,7 +60,7 @@ public class Assassin extends JavaPlugin {
 			debug_mode = true;
 		}
 		setupConfiguration();
-		addCustomRecipes();
+//		addCustomRecipes();
 		//Register events
 		pm.registerEvents(tagListener, this);
 		pm.registerEvents(entityListener, this);
@@ -106,11 +103,11 @@ public class Assassin extends JavaPlugin {
 		scheduler.scheduleSyncRepeatingTask(this, new ActiveTimer(this), 0, 40);
 	}
 
-	private void addCustomRecipes() {
-		ItemStack assassinMask = new NamedItemStack(new ItemStack(Material.WOOL, 1, (short) 0, (byte) 15)).setName(ChatColor.DARK_RED + "Assassin Mask").setLore(ChatColor.GRAY + "Allows PVP", "Hold in your hand and right-click", "to activate assassin mode.").getItemStack();
-		ItemStack blackWool = new ItemStack(Material.WOOL, 1, (short) 0, (byte) 15);
-		CustomShapedRecipe.addRecipe("Assassin Mask", assassinMask, new Object[] { "XXX", "X X", 'X', blackWool });
-	}
+//	private void addCustomRecipes() {
+//		ItemStack assassinMask = new NamedItemStack(new ItemStack(Material.WOOL, 1, (short) 0, (byte) 15)).setName(ChatColor.DARK_RED + "Assassin Mask").setLore(ChatColor.GRAY + "Allows PVP", "Hold in your hand and right-click", "to activate assassin mode.").getItemStack();
+//		ItemStack blackWool = new ItemStack(Material.WOOL, 1, (short) 0, (byte) 15);
+//		CustomShapedRecipe.addRecipe("Assassin Mask", assassinMask, new Object[] { "XXX", "X X", 'X', blackWool });
+//	}
 
 	private void setupConfiguration() {
 		FileConfiguration config = this.getConfig();
@@ -125,6 +122,7 @@ public class Assassin extends JavaPlugin {
 		config.addDefault("Assassin.return_mask", false);
 		config.addDefault("Assassin.prevent_neutral_pvp", true);
 		config.addDefault("Assassin.particle_effects", true);
+		config.addDefault("Assassin.potion_effects", true);
 		config.addDefault("Assassin.warn_time_almost_up", 10);
 		config.addDefault("Assassin.max_allowed", 5);
 
